# earning-reports-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  trading_state.db
.github/workflows/: azure.yml
agent/: graph.py  llm.py  nodes.py  state.py  tools.py
docs/: flowchart.html  signal-engine-diagram-v2.1.html  v3-architecture-audit.md
frontend/: index.html  spy-trader.html  trading.html
spy/: candles.py  cvd.py  engine.py  factors.py  finnhub.py  levels.py  market_utils.py  models.py  router.py  sessions.py  signals.py
spy/agent/: agent.py  tools.py
tasks/: signal-engine-v2.1-impl-plan.md
trading/: constants.py  models.py
trading/agent/: agent.py  brief.py  tools.py
trading/context/: day_context.py  options_context.py  session.py  sim_clock.py
trading/core/: asset_registry.py  gates.py  multi_engine.py
trading/data/: calendar.py  candle_store.py  cvd_engine.py  data_feed.py
trading/detection/: approach.py  breakout.py  confidence.py  defense.py  failed_auction.py  failed_breakout.py  level_state.py  liquidity_grab.py  metrics.py  rejection.py  stop_hunt.py
trading/levels/: builder.py  scorer.py  volume_profile.py  zones.py
trading/notifications/: formatter.py  telegram.py
trading/sim/: fake_finnhub.py
trading/tests/: backtest.py  backtest_500.py  backtest_detection.py  backtest_multi_day.py  friday_data.py  replay_nvda.py  show_levels.py  test_5m_trend.py  test_6fixes.py  test_detection_engine.py  test_fvg_bonus.py  test_integration.py  test_level_rebuild.py  test_llm_e2e.py  test_real_data.py  test_tools.py  (+2 more)
