[project]
name = "earning-reports-agent"
version = "0.1.0"
description = "AI-Powered Earnings Intelligence Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "pdfplumber>=0.11.9",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "lxml>=6.0.2",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
